issuefooter and About Us overlapping

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ header{
     padding: 20px;
     display: flex;
     flex-flow: row wrap;
+    justify-content:flex-end;
 
     background-image: url(buildings.jpg);
     background-repeat:no-repeat;
@@ -29,11 +30,15 @@ nav{
 
 .navitems{
     list-style-type: none;
-    display:flex;
     margin: 0px;
     padding: 0px;
     padding-top: 2px;
-    flex-flow: row wrap;
+    padding-right: 10px;
+    margin-right: 20px;
+
+    display:flex;
+    flex-flow: row wrap
+    
     
 
     
